fix: Fixin profile image on IOS

--- a/src/components/home/details/details.scss
+++ b/src/components/home/details/details.scss
@@ -65,16 +65,16 @@
       height: calc(100% - var(--image-content));
       position: relative;
 
-      img {
-        max-width: 100%;
-        z-index: 2;
-        @include mobile {
-          max-width: initial;
-          max-height: 100%;
-        }
+      i {
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        z-index: 1;
       }
 
-      &::before {
+      &::after {
         content: " ";
         width: calc(var(--sizing-335) - (2 * var(--spacing-30)));
         height: calc(var(--sizing-335) - (2 * var(--spacing-30)));
@@ -82,7 +82,6 @@
         background-color: var(--color-background-opacity);
         display: block;
         position: absolute;
-        z-index: 1;
         margin-top: calc(var(--spacing-75) * -1);
 
         @include mobile {
@@ -134,6 +133,7 @@
 
     @include mobile {
       width: 100vw;
+      height: 60%;
       padding: var(--spacing-10) var(--spacing-20) var(--spacing-20);
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
